# rust-data-extraction

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
archive/code/: airtable.backup  impact.rs.backup
src/: main.rs
src/config/airtable/2022/: child_product copy.json
src/config/airtable/2023/: order_sheet.json
src/config/airtable/2024/: child_product.json
src/job/: airtable.rs  api_extraction.rs  config.rs  emarsys_bq.rs  impact.rs  job.rs  mod.rs  s3_storage.rs  utility.rs
